New endpoint to list transactions
